fix: minor style update to display sidebar content
- without being hidden by toggle button

--- a/src/features/projects/styles/ProjectDetails.module.scss
+++ b/src/features/projects/styles/ProjectDetails.module.scss
@@ -72,7 +72,7 @@
   flex-direction: column;
   background-color: $backgroundColor;
   width: 100%;
-  // padding-bottom: 76px;
+  padding-bottom: 100px;
   height: auto;
   border-top-right-radius: 13px;
   border-top-left-radius: 13px;
@@ -263,6 +263,10 @@
 @include smTabletView {
   .container {
     padding-bottom: 0px;
+  }
+
+  .projectContainer {
+    padding-bottom: 80px;
   }
 }
 
